--- a/html/admin.html
+++ b/html/admin.html
@@ -72,8 +72,8 @@
               </div>
          </div>
          <!-- Filter $ Sort -->
-            <button>Abc</button>
-            <button>123</button>
+            <button id="sort-name">Abc</button>
+            <button id="sort-number">123</button>
             <button>Price</button>
             <button>Name</button>
             <button>Id</button>
