--- a/html/checkout.html
+++ b/html/checkout.html
@@ -43,8 +43,12 @@
             <tbody id="checklistDisplay">
             </tbody>
         </table>
-        <div class="priceTotal">
-
+        <div id="priceTotal">
+            <div><p>TOTAL</p></div>
+            <div id="amount"><p>R</p></div>
+        </div>
+        <div>
+            <button>Purchase</button>
         </div>
     </section>
 
@@ -61,6 +65,8 @@
         </div>
         <div class="copyright">
             <p>2022, Sir Richard Foundation etc</p>
+
+            
         </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
