--- a/index.html
+++ b/index.html
@@ -16,19 +16,39 @@
   </head>
 
   <body>
-    <section id="header">
-      <h4>The Richard Foundation</h4>
+    <!-- <section id="header"> -->
+      <nav id="header" class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <h4>The Richard Foundation</h4>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul id="navbar" class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/checkout.html">Checkout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/admin.html">Admin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- <h4>The Richard Foundation</h4>
 
-      <div>
         <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="./html/checkout.html">Checkout</a></li>
           <li><a href="./html/admin.html">Admin</a></li>
-        </ul>
-      </div>
-    </section>
+        </ul> -->
+      <!-- </div>
+    </section> -->
     <section id="banner">
-        <!-- Show Banner -->
+      <img src="./assets/images/bacground1.png" class="img-fluid">
     </section>
 
     <div>
