--- a/html/admin.html
+++ b/html/admin.html
@@ -7,22 +7,29 @@
         <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../style/styles.css">
-    <title>Document</title>
+    <title>Admin</title>
 </head>
 
 <body>
-
-    <section id="header" class="container-fluid">
-        <h4>The Richard Foundation</h4>
-
-        <div>
-            <ul id="navbar">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="checkout.html">Checkout</a></li>
-                <li><a class="active" href="admin.html">Admin</a></li>
+    <div class="text-center" style="background-color: #222; color: #fff;text-decoration: underline;height: 36px;font-size: 14px; font-weight: 200;padding: 6px;">Buy now and get 15% off your first app order</div>
+    <section id="navigation-and-logo">
+        <nav id="nav-bar">
+          <a class="logo" href="../index.html">The Richard Foundation</a>
+          <div >
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="checkout.html">Checkout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admin.html">Admin</a>
+              </li>
             </ul>
-        </div>
-    </section>
+          </div>
+        </nav>
+      </section>
 
     <div>
         <hr><h2 class="div">Admin</h2><hr>
