--- a/index.html
+++ b/index.html
@@ -4,61 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/a617dd8696.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/styles.css" />
     <title>Document</title>
   </head>
 
-  <body>
-    <!-- <section id="header"> -->
-      <nav id="header" class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <h4>The Richard Foundation</h4>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul id="navbar" class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./html/checkout.html">Checkout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./html/admin.html">Admin</a>
-              </li>
-            </ul>
-          </div>
+  <body> 
+    <div class="marquee">Buy now and get 15% off your first app order</div>
+    <section id="navigation-and-logo">
+      <nav id="nav-bar">
+        <a class="logo" href="index.html">The Richard Foundation</a>
+        <div >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./html/checkout.html">Checkout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./html/admin.html">Admin</a>
+            </li>
+          </ul>
         </div>
       </nav>
-      <!-- <h4>The Richard Foundation</h4>
-
-        <ul id="navbar">
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="./html/checkout.html">Checkout</a></li>
-          <li><a href="./html/admin.html">Admin</a></li>
-        </ul> -->
-      <!-- </div>
-    </section> -->
-    <section id="banner">
-      <img src="./assets/images/bacground1.png" class="img-fluid">
     </section>
 
-    <div>
-      <hr />
-      <h2 class="div">Featured</h2>
-      <hr />
+    <div class="banner">
     </div>
     
-    <section id="feature" class="section">
-       <!-- Display Products --> 
+    <section id="feature">
+      <div class="featured-header">
+        <p>
+          DESIGNER HATS FOR MEN
+        </p>
+        <button>Shop</button>
+      </div>
+
+      <div class="featured-items">
+        <!-- Display Products --> 
+
+      </div> 
     </section>
 
     <footer>
@@ -76,12 +62,6 @@
         <p>2022, Sir Richard Foundation etc</p>
       </div>
     </footer>
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
